--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v2
     - name: Install dependencies
       run: |
         python -m pip install .[test]
