fix: Proper dependency management within setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author_email = me@janhendrikewers.uk
 [options]
 packages = find:
 python_requires = >=3.8
-requires:
+install_requires =
   protobuf
 
 [options.extras_require]
