--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,8 +20,7 @@ jobs:
           - "3.11"
           - "3.12"
         os:
-          - "ubuntu-22.04"
-          - "ubuntu-20.04"
+          - "ubuntu-latest"
         include:
           - os: "windows-latest"
             python-version: "3.11"
