--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install Protoc
       uses: arduino/setup-protoc@v2
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Install dependencies
       run: |
         python -m pip install .[test]
